--- a/index.html
+++ b/index.html
@@ -1,31 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>404 Not Found Challenge</title>
-    <link rel="shortcut icon" href="https://devchallenges.io/" type="image/x-icon">
-    <link rel="icon" href="devchallenges.png"/>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-    <header>
-        <h2>404 Not Found</h2>
-    </header>
-    <main>
-        <section>
-            <div class="img-box">
-                <img src="./Scarecrow.png" alt="">
-            </div>
-            <div class="text-box">
-                <h1>I have bad news for you</h1>
-                <p>The page you are looking for might be removed or temporarily unavailable</p>
-                <button>Back to Homepage</button>
-            </div>
-        </section>
-    </main>
-    <footer>
-        <p>Created by<span>@devsohanbd</span>-devChallenges.io</p>
-    </footer>  
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>404 Not Found Challenge</title>
+		<link rel="shortcut icon" href="https://devchallenges.io/" type="image/x-icon" />
+		<link rel="icon" href="devchallenges.png" />
+		<link rel="stylesheet" href="styles.css" />
+	</head>
+	<body>
+		<header>
+			<h2>404 Not Found</h2>
+		</header>
+		<main>
+			<section>
+				<div class="img-box">
+					<img src="./Scarecrow.png" alt="" />
+				</div>
+				<div class="text-box">
+					<h1>I have bad news for you</h1>
+					<p>The page you are looking for might be removed or temporarily unavailable</p>
+					<button>Back to Homepage</button>
+				</div>
+			</section>
+		</main>
+		<footer>
+			<p>Created by<span>@mspsohan</span>-devChallenges.io</p>
+		</footer>
+	</body>
 </html>
